# gunther

./: .gitignore  README.md  pyproject.toml  sample_schema.yaml
gunther/src/common/: common_types.py
gunther/src/configuration/: simulation_manifest_loader.py
gunther/src/configuration/config_t/: device_cfg_t.py
gunther/src/configuration/configs/: __init__.py  antenna_config.py  device_template.py  environment_config.py  node_config.py  node_placement_config.py  orientation.py  radio_config.py  region_mask.py  simulation_manifest.py  solver_config.py
gunther/src/domain/: antenna.py  node.py  radio.py  region.py
gunther/src/interfaces/: network_edge.py  physics_edge.py  simulation_node.py
gunther/src/processing/: batcher.py
