[project]
name = "gunther"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateusz Tyc",email = "tycmat9@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "sionna-rt (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "prettyprint (>=0.1.5,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
